crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_metadata_view_with_where_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": 0.2855,
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "Pedunculagin and alchemillin have astringent and wound-healing properties, possibly due to their high tannin content."
        ]
      },
      "primary_key": {
        "id": 1015
      }
    },
    {
      "_score": 0.2465,
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "Dermatomycosis is caused by fungal infections, specifically various forms of *tinea*, such as athlete's foot (*tinea pedis*)."
        ]
      },
      "primary_key": {
        "id": 821
      }
    },
    {
      "_score": 0.2348,
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "More than 10 years of follow-up is required, as late recurrences (beyond 12 years) have been reported in 5%–10% of patients."
        ]
      },
      "primary_key": {
        "id": 449
      }
    },
    {
      "_score": 0.2046,
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "The body profile of Menidae is very deep and resembles a flat disc, due to the strongly curved ventral contour."
        ]
      },
      "primary_key": {
        "id": 1193
      }
    }
  ]
}
