crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_multiple_embeddings_additional_columns2_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.02",
      "data": {
        "answer": "The multiples of 4 between 1 and 30 are 4, 8, 12, 16, 20, 24, and 28. Counting these, there are $\\boxed{7}$ multiples."
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "The multiples of 4 between 1 and 30 are 4, 8, 12, 16, 20, 24, and 28. Counting these, there are $\\boxed{7}$ multiples."
        ]
      },
      "primary_key": {
        "id": 468
      }
    },
    {
      "_score": "0.02",
      "data": {
        "answer": "To find how many groups of 2 are in 14, divide 14 by 2:  \n\\[ 14 \\div 2 = 7 \\]  \nThus, there are $\\boxed{7}$ groups of 2 in 14."
      },
      "dataset": "qs",
      "matches": {
        "question": [
          "How many groups of 2 are in 14?"
        ]
      },
      "primary_key": {
        "id": 462
      }
    },
    {
      "_score": "0.02",
      "data": {
        "answer": "The number of ways is \\( 18 \\times 17 \\times 16 = \\boxed{4896} \\)."
      },
      "dataset": "qs",
      "matches": {
        "question": [
          "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
        ]
      },
      "primary_key": {
        "id": 361
      }
    },
    {
      "_score": "0.02",
      "data": {
        "answer": "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ]
      },
      "primary_key": {
        "id": 1277
      }
    }
  ]
}
