crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_multiple_embeddings_additional_columns_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.03",
      "data": {
        "question": "How many multiples of 4 are there between 1 and 30? List them and count the total."
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "The multiples of 4 between 1 and 30 are 4, 8, 12, 16, 20, 24, and 28. Counting these, there are $\\boxed{7}$ multiples."
        ],
        "question": [
          "How many multiples of 4 are there between 1 and 30? List them and count the total."
        ]
      },
      "primary_key": {
        "id": 468
      }
    },
    {
      "_score": "0.03",
      "data": {
        "question": "How many groups of 5 are in 25?"
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "To find how many groups of 5 are in 25, divide 25 by 5:  \n\\[ 25 \\div 5 = 5 \\]  \nSo, there are $\\boxed{5}$ groups of 5 in 25."
        ],
        "question": [
          "How many groups of 5 are in 25?"
        ]
      },
      "primary_key": {
        "id": 464
      }
    },
    {
      "_score": "0.03",
      "data": {
        "question": "How many groups of 2 are in 14?"
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "To find how many groups of 2 are in 14, divide 14 by 2:  \n\\[ 14 \\div 2 = 7 \\]  \nThus, there are $\\boxed{7}$ groups of 2 in 14."
        ],
        "question": [
          "How many groups of 2 are in 14?"
        ]
      },
      "primary_key": {
        "id": 462
      }
    },
    {
      "_score": "0.03",
      "data": {
        "question": "Which base number, when raised to the fifth power, equals thirty-two?"
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ],
        "question": [
          "Which base number, when raised to the fifth power, equals thirty-two?"
        ]
      },
      "primary_key": {
        "id": 1277
      }
    }
  ]
}
