crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_multiple_embeddings_vector_search_questions_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer, trunc(_score, 3) FROM vector_search(qs, 'second', question) order by _score desc, id LIMIT 4"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                        |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second"), question).id, vector_search(qs, Utf8("second"), question).answer, trunc(vector_search(qs, Utf8("second"), question)._score,Int64(3))                                                          |
|               |   Sort: vector_search(qs, Utf8("second"), question)._score DESC NULLS FIRST, vector_search(qs, Utf8("second"), question).id ASC NULLS LAST, fetch=4                                                                                         |
|               |     Projection: vector_search(qs, Utf8("second"), question).id, vector_search(qs, Utf8("second"), question).answer, trunc(vector_search(qs, Utf8("second"), question)._score, Int64(3)), vector_search(qs, Utf8("second"), question)._score |
|               |       TableScan: vector_search(qs, Utf8("second"), question) projection=[_score, answer, id]                                                                                                                                                |
| physical_plan | ProjectionExec: expr=[id@0 as id, answer@1 as answer, trunc(vector_search(qs, Utf8("second"), question)._score,Int64(3))@2 as trunc(vector_search(qs, Utf8("second"), question)._score,Int64(3))]                                           |
|               |   SortPreservingMergeExec: [_score@3 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                                                                    |
|               |     SortExec: TopK(fetch=4), expr=[_score@3 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                        |
|               |       ProjectionExec: expr=[id@2 as id, answer@1 as answer, trunc(_score@0, 3) as trunc(vector_search(qs, Utf8("second"), question)._score,Int64(3)), _score@0 as _score]                                                                   |
|               |         RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                |
|               |           ProjectionExec: expr=[_score@1 as _score, answer@2 as answer, id@0 as id]                                                                                                                                                         |
|               |             HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@1)], projection=[id@0, _score@1, answer@2]                                                                                     |
|               |               CoalescePartitionsExec                                                                                                                                                                                                        |
|               |                 ProjectionExec: expr=[CAST(key@0 AS Int64) as id, 1 - distance@1 as _score]                                                                                                                                                 |
|               |                   BytesProcessedExec                                                                                                                                                                                                        |
|               |                     RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                    |
|               |                       S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                                                                                                          |
|               |               SchemaCastScanExec                                                                                                                                                                                                            |
|               |                 BytesProcessedExec                                                                                                                                                                                                          |
|               |                   DataSourceExec: partitions=1, partition_sizes=[1]                                                                                                                                                                         |
|               |                                                                                                                                                                                                                                             |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
